tooltip, testes na sidenavbar, ajustes na topnavbar, ajustes no modal topnavbar, teste na responsividade no css global

--- a/src/styles/SideNavBar.module.css
+++ b/src/styles/SideNavBar.module.css
@@ -2,28 +2,37 @@
   display: flex;
   position: fixed;
   padding-top: 1rem;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  width: 17em;
+  top: 6.5%;
+  left: -2em;
+  bottom: 1%;
+  width: 16.8em;
   background-image: url('/fundo_alternativo.png');
   background-size: cover;
   background-position: center;
   flex-direction: column;
   align-items: left;
   justify-content: space-between;
-  box-shadow: 2px 0px 10px var(--black-14);
-  transition: transform 0.3s ease-out;
+  box-shadow: 2px 0px 18px var(--black-80);
+  transition: width 0.3s ease-out, transform 0.3s ease-out;
   transform: translateX(0);
+  border-top: solid var(--gray-200);
+  border-bottom: solid var(--gray-200);
+  border-right: solid var(--gray-200);
+  border-radius: 40px;
+}
+
+.navBar.hidden{
+  transform: translateX(-10em); 
 }
 
 .navBarButton {
   display: flex;
   font-family: 'Poppins', sans-serif;
-  font-size: 0.87em;
+  font-size: 0.77em;
   color: var(--gray-100);
   text-decoration: none;
   padding: 1.23em 2em;
+  left: -1em;
   margin-bottom: 20px;
   user-select: none;
   position: relative;
@@ -60,7 +69,7 @@
 
 .buttonsContainer {
   margin-top: 4.5em;
-  padding: 1.4em;
+  padding: 2.4rem;
   border-radius: 1em;
 }
 
@@ -73,14 +82,10 @@
   margin-left: 0.7em;
 }
 
-.hidden {
-  transform: translateX(-17em);
-}
-
 .iconHidable {
   position: absolute;
   color: var(--azul-tech);
-  left: 16.5em;
+  left: 8em;
   top: calc(4.5em + 1em);
   padding: 5px;
 }
