--- a/src/styles/TopNavBar.module.css
+++ b/src/styles/TopNavBar.module.css
@@ -5,26 +5,24 @@
   right: 0;
   z-index: 1;
   display: flex;
-  height: 4.5em;
+  height: 2.8em;
   align-items: center;
   background-image: url('/fundo_alternativo.png');
   background-size: cover;
   background-position: center;
   padding: 1rem;
-  box-shadow: 0px 8px 20px -6px var(--black-14);
+  box-shadow: 2px 0px 18px var(--black-80);
   color: var(--azul-tech);
 }
 
 
 .logoContainer {
   display: flex;
-  margin-top: 0.2rem;
-  margin-left: 0.6rem;
-  margin-right: 3.8em;
+  margin: 0.2em 0em 0em 0.6em;
 }
 
 .logo {
-  margin-right: 0.5em;
+  margin-left: 0.5em;
 }
 
 .toogleTopNav {
@@ -32,8 +30,8 @@
   justify-content: center;
   align-items: center;
   cursor: pointer;
-  width: 2.5em;
-  height: 2.5em;
+  width: 1.5em;
+  height: 1.5em;
   border-radius: 50%;
   color: var(--white);
 }
@@ -48,11 +46,11 @@
 }
 
 .user {
-  font-size: 0.85em;
+  font-size: 0.7em;
   color: var(--white);
   display: flex;
   align-items: flex-end;
-  margin-right: 0.9em;
+  margin: 0.2em 1em 0em 0em;
   cursor: default;
 }
 
