--- a/src/styles/Table.module.css
+++ b/src/styles/Table.module.css
@@ -2,6 +2,8 @@
   display: flex;
   margin-top: 1em;
   flex-direction: column;
+  max-height: 100%;
+  overflow: auto;
 }
 
 .table table {
@@ -35,6 +37,7 @@
 .pagination {
   display: flex;
   margin-top: 0.5rem;
+  padding-left: 5em;
   justify-content: center;
   align-items: center;
   gap: 1rem;
@@ -143,4 +146,11 @@
 }
 .errorNotDadosSpan {
   color: var(--red-300);
+}
+.conteinerItemsPerPg {
+  font-size: 0.9em;
+  color: var(--azul-tenro);
+}
+.selectItemPerPage {
+  cursor: pointer;
 }
