--- a/src/styles/AcompanhamentoPDG.module.css
+++ b/src/styles/AcompanhamentoPDG.module.css
@@ -193,3 +193,27 @@
   outline: none;
   cursor: auto;
 }
+.flexContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: end;
+  justify-content: flex-start;
+}
+.divDataObsertavion {
+  display: flex;
+  align-items: center;
+  background-color: var(--white);
+  padding: 3px 5px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  cursor: pointer;
+  width: 101%;
+}
+
+.inputDataObservation {
+  width: 100%;
+  padding: 8px;
+  border: none;
+  outline: none;
+  cursor: pointer;
+}
