SidenavBar icon buttons

--- a/src/styles/SideNavBar.module.css
+++ b/src/styles/SideNavBar.module.css
@@ -2,13 +2,11 @@
   display: flex;
   position: fixed;
   padding-top: 1rem;
-  top: 6.5%;
+  top: 5.5%;
   left: -2em;
   bottom: 1%;
-  width: 17em;
+  width: 18em;
   background-image: url('/fundo_alternativo.png');
-  background-size: cover;
-  background-position: center;
   flex-direction: column;
   align-items: left;
   justify-content: space-between;
@@ -22,20 +20,20 @@
 }
 
 .hidden{
-  transform: translateX(-10em); 
+  transform: translateX(-10.5em); 
 }
 
 .navBarButton {
   display: flex;
-  font-family: 'Poppins', sans-serif;
-  font-size: 0.77em;
-  color: var(--gray-100);
-  text-decoration: none;
-  padding: 1.23em 2em;
-  left: -1em;
-  margin-bottom: 20px;
-  user-select: none;
   position: relative;
+  align-items: center;
+  justify-content: center;
+  font-family: 'Poppins', sans-serif;
+  font-size: 0.9em;
+  color: var(--gray-100);
+  padding: 1.1em 2em;
+  left: -1em;
+  margin-bottom: 1.4em;
   transition: background-color 0.3s, color 0.3s, border-color 0.3s;
   border-radius: 1em;
 }
@@ -68,8 +66,9 @@
 }
 
 .buttonsContainer {
+  margin-left: 1em;
   margin-top: 1em;
-  padding: 2.3rem;
+  padding: 1.1em;
   border-radius: 1em;
 }
 
@@ -79,7 +78,7 @@
 
 .text {
   margin: 0.1em 0em 0em 0.7em;
-  font-size: 1.1em;
+  font-size: 1.07em;
   flex-grow: 1; 
 }
 
@@ -87,11 +86,15 @@
   font-size: 1.5em;
 }
 
+.iconContainer {
+  width: auto;
+  overflow: visible;
+}
+
 .buttonHidden {
-  margin-left: 12em;
+  margin-left: 11.7em;
   margin-bottom: 3em;
   transform: scale(1.5);
-  width: 4em;
   color: var(--white);
   display: flex;
   align-items: center;
@@ -101,13 +104,16 @@
   position: relative;
 }
 
+.buttonHidden:hover {
+  transform: scale(1.7);
+}
+
 .activeButtonHidden {
   background: linear-gradient(to bottom, var(--azul-techt), var(--verde-techt));
   color: var(--white);
   padding: 0.3em 0.75em;
   transform: scale(1.2);
   border-radius: 0.5em;
-  margin-right: 2.3em;
   transition: transform 0.3s ease, border-color 0.3s;
   display: flex;
   align-items: center;
