--- a/src/styles/SideNavBar.module.css
+++ b/src/styles/SideNavBar.module.css
@@ -3,24 +3,22 @@
   position: fixed;
   padding-top: 1rem;
   top: 5.5%;
-  left: -2em;
+  left: -1.8em;
   bottom: 1%;
   width: 18em;
   background-image: url('/fundo_alternativo.png');
   flex-direction: column;
-  align-items: left;
+  align-items: flex-start;
   justify-content: space-between;
   box-shadow: 2px 0px 18px var(--black-80);
   transition: width 0.3s ease-out, transform 0.3s ease-out;
   transform: translateX(0);
-  border-top: solid 0.1em var(--gray-200);
-  border-bottom: solid 0.1em var(--gray-200);
-  border-right: solid 0.1em var(--gray-200);
+  border: solid 0.1em var(--gray-200);
   border-radius: 40px;
 }
 
-.hidden{
-  transform: translateX(-10.5em); 
+.hidden {
+  transform: translateX(-10.5em);
 }
 
 .navBarButton {
@@ -32,7 +30,7 @@
   font-size: 0.9em;
   color: var(--gray-100);
   padding: 1.1em 2em;
-  left: -1em;
+  left: -0.7em;
   margin-bottom: 1.4em;
   transition: background-color 0.3s, color 0.3s, border-color 0.3s;
   border-radius: 1em;
@@ -46,7 +44,6 @@
   color: var(--white);
   background: var(--azul-tech-opaque);
   border-radius: 1em;
-  border-color: solid var(--gray-300);
 }
 
 .activeNavBarButton {
@@ -66,8 +63,7 @@
 }
 
 .buttonsContainer {
-  margin-left: 1em;
-  margin-top: 1em;
+  margin: 1em;
   padding: 1.1em;
   border-radius: 1em;
 }
@@ -77,9 +73,9 @@
 }
 
 .text {
-  margin: 0.1em 0em 0em 0.7em;
+  margin-left: 1em;
   font-size: 1.07em;
-  flex-grow: 1; 
+  flex-grow: 1;
 }
 
 .icon {
@@ -87,12 +83,12 @@
 }
 
 .iconContainer {
-  width: auto;
   overflow: visible;
 }
 
 .buttonHidden {
-  margin-left: 11.7em;
+  margin-left: 11.4em;
+  padding: 0.3em 0.8em;
   margin-bottom: 3em;
   transform: scale(1.5);
   color: var(--white);
@@ -101,7 +97,6 @@
   justify-content: center;
   border-radius: 0.5em;
   transition: width 0.3s, height 0.3s;
-  position: relative;
 }
 
 .buttonHidden:hover {
@@ -109,14 +104,25 @@
 }
 
 .activeButtonHidden {
-  background: linear-gradient(to bottom, var(--azul-techt), var(--verde-techt));
   color: var(--white);
-  padding: 0.3em 0.75em;
-  transform: scale(1.2);
+  transform: scale(1.3);
   border-radius: 0.5em;
   transition: transform 0.3s ease, border-color 0.3s;
   display: flex;
   align-items: center;
   justify-content: center;
   position: relative;
+}
+
+.activeButtonHidden::before {
+  content: '';
+  position: absolute;
+  top: -5px;
+  right: -5px;
+  bottom: -5px;
+  left: -1em;
+  background: linear-gradient(to bottom, var(--azul-techt), var(--verde-techt));
+  border-radius: 0.5em;
+  z-index: -1;
+  transition: transform 0.3s ease;
 }
