--- a/src/styles/ComponenteQuill.module.css
+++ b/src/styles/ComponenteQuill.module.css
@@ -1,7 +1,9 @@
 .meuEditorQuill {
   border-radius: 5px;
   line-height: 1.5;
+
   border: 1px solid var(--gray-200);
+  padding-bottom: 41px;
   border-radius: 4px;
   background-color: var(--white);
   width: 100%;
