--- a/src/styles/ModalTopNavBaR.module.css
+++ b/src/styles/ModalTopNavBaR.module.css
@@ -13,7 +13,7 @@
 
 .container {
   font-size: 0.9rem;
-  background-color: var(--white-300);
+  background-color: var(--white);
   border-radius: 10px;
   padding: 1rem;
   width: 10rem;
