--- a/src/styles/SideNavBar.module.css
+++ b/src/styles/SideNavBar.module.css
@@ -2,11 +2,11 @@
   display: flex;
   position: fixed;
   padding-top: 1rem;
-  top: 5.5%;
-  left: -1.8em;
+  top: 6.3%;
+  left: -2.05em;
   bottom: 1%;
-  width: 18em;
-  background-image: url('/fundo_alternativo.png');
+  width: 17.7em;
+  background-image: url('/fundo_alternativo.webp');
   flex-direction: column;
   align-items: flex-start;
   justify-content: space-between;
@@ -18,7 +18,7 @@
 }
 
 .hidden {
-  transform: translateX(-10.5em);
+  transform: translateX(-11em);
 }
 
 .navBarButton {
@@ -26,11 +26,10 @@
   position: relative;
   align-items: center;
   justify-content: center;
-  font-family: 'Poppins', sans-serif;
   font-size: 0.9em;
   color: var(--gray-100);
-  padding: 1.1em 2em;
-  left: -0.7em;
+  padding: 1.3em 2em;
+  left: -0.4em;
   margin-bottom: 1.4em;
   transition: background-color 0.3s, color 0.3s, border-color 0.3s;
   border-radius: 1em;
@@ -64,7 +63,7 @@
 
 .buttonsContainer {
   margin: 1em;
-  padding: 1.1em;
+  padding: 0.9em;
   border-radius: 1em;
 }
 
