--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,5 +1,4 @@
 :root {
-   font-size: 16px;
   --white: #ffffff;
   --white-200:#eaf0f7;
   --white-300:#f1f5fa;
@@ -32,7 +31,7 @@
 }
 
 * {
-  font-family: 'Poppins', sans-serif;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif, Roboto;
   font-size: 16px;
   margin: 0;
   padding: 0;
