--- a/src/styles/Login.module.css
+++ b/src/styles/Login.module.css
@@ -1,11 +1,10 @@
-
 .containerFundo {
   flex-direction: column;
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 1em;
-  width: 100%;
+  gap: 0.5em;
+  width: 100vw;
   min-height: 100vh;
   background-image: url('/fundo_alternativo2.webp');
   background-repeat: no-repeat;
@@ -46,7 +45,6 @@
 
 .title {
   margin-left: 2rem;
-  font-weight: 550;
   font-size: 210%;
 }
 
@@ -78,7 +76,6 @@
   background-color: var(--verde-learn);
   justify-content: center;
   align-items: center;
-  font-family: 'Poppins', sans-serif;
   cursor: pointer;
   position: relative;
   margin-left: 2rem;
