--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -31,9 +31,18 @@
 }
 
 * {
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif, Roboto;
   font-size: 16px;
+  font-family: 'MuseoSansRounded300', 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+}
+
+@font-face {
+  font-family: 'MuseoSansRounded300';
+  font-style: normal;
+  font-weight: 300;
+  font-display: swap;
+  src: local('MuseoSansRounded300'), local('MuseoSansRounded300'),
+       url('/fonts/-Museo/MuseoSansRounded300.otf') format('opentype');
 }
