--- a/src/styles/Page.module.css
+++ b/src/styles/Page.module.css
@@ -9,6 +9,7 @@
   flex-direction: column;
   min-height: 80%;
   height: 95%;
+  width: 100%;
   margin-top: 1.7em;
   padding: 1.2em;
   padding-bottom: 0.9em;
