--- a/src/styles/Table.module.css
+++ b/src/styles/Table.module.css
@@ -3,7 +3,8 @@
   margin-top: 1em;
   flex-direction: column;
   max-height: 100%;
-  overflow: auto;
+  overflow-y: auto;
+  overflow-x: hidden;
 }
 
 .table table {
