--- a/src/styles/ModalDelete.module.css
+++ b/src/styles/ModalDelete.module.css
@@ -36,6 +36,7 @@
 .buttonContainer {
   display: flex;
   justify-content: center;
+  gap: 0.6rem;
 }
 
 .confirmButton,
@@ -46,7 +47,7 @@
   cursor: pointer;
   box-shadow: 0px 10px 20px 0px var(--black-200);
   margin-top: 10px;
-  transition: all 0.3s ease; 
+  transition: all 0.3s ease;
 }
 
 .confirmButton {
@@ -63,5 +64,5 @@
 .confirmButton:hover,
 .cancelButton:hover {
   transform: translateY(-2px);
-  box-shadow: 0px 12px 25px 0px var(--black-200); 
+  box-shadow: 0px 12px 25px 0px var(--black-200);
 }
