--- a/src/styles/ModalTopNavBaR.module.css
+++ b/src/styles/ModalTopNavBaR.module.css
@@ -17,7 +17,7 @@
   border-radius: 10px;
   padding: 1rem;
   width: 10rem;
-  height: 8rem;
+  height: 9rem;
   color: var(--gray-300);
   text-align: center;
   box-shadow: 0 0 10px var(--azul-escuro);
@@ -57,6 +57,7 @@
   border-radius: 5px;
 }
 
-.text, .icon {
+.text,
+.icon {
   vertical-align: middle;
 }
