--- a/src/styles/ModalStandard.module.css
+++ b/src/styles/ModalStandard.module.css
@@ -1,27 +1,3 @@
-.background {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  display: flex;
-  background-color: var(--gray-202);
-  justify-content: center;
-  align-items: center;
-  z-index: 3;
-}
-
-.container {
-  background-color: var(--white);
-  border-radius: 10px;
-  padding: 2rem;
-  width: 43rem;
-  max-width: 90%;
-  text-align: center;
-  box-shadow: 0 0 10px var(--black-200);
-  z-index: 8;
-}
-
 .boxStandard {
   display: flex;
   flex-direction: column;
@@ -29,12 +5,18 @@
   gap: 1rem;
 }
 
+.boxCidadeEstadoCepTel {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  margin-top: 1rem;
+  gap: 1.5rem;
+}
 .labelStandard {
+  font-size: 1rem;
   display: flex;
   flex-direction: column;
-
   align-items: start;
-  font-size: 1rem;
 }
 
 .inputStandard {
@@ -49,7 +31,6 @@
   color: var(--azul-tenro);
   cursor: text;
 }
-
 .inputStandardError {
   all: unset;
   text-align: start;
@@ -61,14 +42,21 @@
   margin-top: 0.2rem;
   cursor: text;
 }
+.inputStandard:focus-within {
+  box-shadow: 0 0 5px var(--gray-200);
+}
+.labelStandard {
+  font-size: 1rem;
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+}
 
 .inputSelect {
   text-align: start;
   width: 102%;
   padding-left: 0.7rem;
   height: 2.5rem;
-  max-height: 4rem;
-  overflow: auto;
   color: var(--azul-tenro);
   border-radius: 5px;
   border: 1px solid var(--gray-200);
@@ -77,60 +65,11 @@
   cursor: pointer;
 }
 
-.inputStandard:focus-within,
 .inputSelect:focus-within {
   box-shadow: 0 0 5px var(--gray-200);
 }
 .inputSelect:focus {
   outline: transparent;
-}
-
-.buttonContainer {
-  display: flex;
-  justify-content: center;
-  margin-top: 1rem;
-  gap: 1rem;
-}
-
-.confirmButton,
-.cancelButton {
-  border: none;
-  border-radius: 4px;
-  padding: 10px 20px;
-  cursor: pointer;
-  box-shadow: 0px 10px 20px 0px var(--black-200);
-  margin-top: -10px;
-  transition: all 0.3s ease;
-}
-
-.confirmButton {
-  background-color: var(--verde-learn);
-  color: var(--white);
-}
-
-.cancelButton {
-  background-color: var(--red-300);
-  color: var(--white);
-}
-
-.confirmButton:hover,
-.cancelButton:hover {
-  transform: translateY(-2px);
-  box-shadow: 0px 12px 25px 0px var(--black-200);
-}
-
-.confirmButton:active,
-.cancelButton:active {
-  transform: translateY(0);
-  box-shadow: 0px 6px 12px 0px var(--black-200);
-}
-
-.boxCidadeEstadoCepTel {
-  display: flex;
-  justify-content: space-between;
-  width: 100%;
-  margin-top: 1rem;
-  gap: 1.5rem;
 }
 
 .boxEstadoTel,
