--- a/src/styles/TopNavBar.module.css
+++ b/src/styles/TopNavBar.module.css
@@ -7,7 +7,7 @@
   display: flex;
   height: 2.8em;
   align-items: center;
-  background-image: url('/fundo_alternativo.png');
+  background-image: url('/fundo_alternativo.webp');
   background-size: cover;
   background-position: center;
   padding: 1rem;
