--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -23,7 +23,7 @@
   gap: 1em;
   width: 100vw;
   height: 100vh;
-  background-image: url('/fundo_alternativo2.png');
+  background-image: url('/fundo_alternativo2.webp');
   background-repeat: no-repeat;
   background-size: cover;
 }
