canal, tipo e confidencial criados na ocorrencia

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -17,6 +17,7 @@
   --verde-tech: rgb(12, 182, 177);
   --verde-tech-claro: #B8FFDE;
   --verde-learn: rgb(0, 135, 157);
+  --verde-learn-light: rgb(96, 171, 182);
   --azul-tech-opaque: rgb(49, 89, 156, 0.7);
   --azul-techt: rgb(49, 89, 156, 0.7);
   --verde-light: rgb(166, 206, 57);
