--- a/src/styles/CheckboxGroup.module.css
+++ b/src/styles/CheckboxGroup.module.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   gap: 1rem;
   padding: 1rem;
-  border: 1px solid var(--gray-300);
+  border: 1px solid var(--verde-learn);
   border-radius: 8px;
   background-color: var(--white);
   max-height: 300px;
@@ -15,16 +15,16 @@
 }
 
 .checkboxGroup::-webkit-scrollbar-track {
-  background: #f1f1f1;
+  background: rgb(210, 240, 244);
 }
 
 .checkboxGroup::-webkit-scrollbar-thumb {
-  background: #888;
+  background: var(--verde-learn-light);
   border-radius: 4px;
 }
 
 .checkboxGroup::-webkit-scrollbar-thumb:hover {
-  background: #555;
+  background: var(--verde-learn-light);
 }
 
 .checkboxLabel {
@@ -57,7 +57,7 @@
   width: 20px;
   height: 20px;
   border-radius: 4px;
-  border: 2px solid var(--verde-learn); 
+  border: 1px solid var(--verde-learn); 
   outline: none;
   position: relative;
   transition: background-color 0.3s, border-color 0.3s;
@@ -72,7 +72,7 @@
   content: '';
   display: block;
   position: absolute;
-  top: 50%; 
+  top: 45%; 
   left: 50%; 
   transform: translate(-50%, -50%) rotate(45deg); 
   width: 5px;
